# learn-cmake

./: README.md
01.start/: CMakelists.txt
02.cpp-std/: CMakeLists.txt  main.cpp
03.version/: CMakeLists.txt  main.cpp  version.h.in
04.lib/: CMakeLists.txt  main.cpp
04.lib/add/: CMakeLists.txt
05.option/: CMakeLists.txt  main.cpp
06.interface/: CMakeLists.txt
07.generator/: CMakeLists.txt
08.install/: CMakeLists.txt  main.cpp
09.test/: CMakeLists.txt  main.cpp
10.checkenv/: CMakeLists.txt  main.cpp
11.custom_command/: CMakeLists.txt  gen_version.sh  main.cpp
12.single_file_flags/: CMakeLists.txt  main.cpp
12.single_file_flags/add/: add.cpp  add.h
